--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>CoachKit</title>
-        <script src="https://unpkg.com/htmx.org@1.9.10"></script>
-        <script src="https://cdn.tailwindcss.com"></script>
-    </head>
-<body class = "bg-gray-100 min-h-screen">
+<head>
+    <title>CoachKit</title>
+    <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-100 min-h-screen">
     {% block content %}{% endblock %}
+    
+    <div id="modal-container"></div>
 </body>
 </html>
