--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <title>CoachKit</title>
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg-gray-100 min-h-screen">
     {% block content %}{% endblock %}
